# Cerf-Volant

./: DEPLOY.md  README.md  TESTING.md  initiali-propose.txt  settings.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: tracking_utils.h
app/src/main/res/layout/: activity_calibration.xml  activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
cerf-volant-camera-tracker/: BUILD.md  gradlew  gradlew.bat  initial-prompt-humain.txt
cerf-volant-camera-tracker/app/: build.gradle
cerf-volant-camera-tracker/app/src/main/cpp/: CMakeLists.txt  audio_synth.cpp  audio_synth.h  tracking_utils.cpp
cerf-volant-camera-tracker/app/src/main/res/drawable/: overlay_rectangle.xml
cerf-volant-camera-tracker/app/src/main/res/layout/: activity_settings.xml
cerf-volant-camera-tracker/app/src/main/res/values/: colors.xml  themes.xml
cerf-volant-camera-tracker/openspec/changes/kite-tracking-monocular/: README.md  proposal.md  tasks.md
cerf-volant-camera-tracker/openspec/changes/kite-tracking-monocular/specs/audio-sonification/: spec.md
cerf-volant-camera-tracker/openspec/changes/kite-tracking-monocular/specs/bluetooth-audio-streaming/: spec.md
cerf-volant-camera-tracker/openspec/changes/kite-tracking-monocular/specs/kite-kinematics/: spec.md
openspec/changes/kite-tracking-monocular/: design.md
openspec/changes/kite-tracking-monocular/specs/calibration-phase/: spec.md
openspec/changes/kite-tracking-monocular/specs/kite-visual-tracking/: spec.md
openspec/changes/kite-tracking-monocular/specs/monocular-depth-estimation/: spec.md
(+20 files in other folders)
